# graph-algorithms

./: AiZO2_badania.xlsx  CMakeLists.txt  README.md
data/: input_graph1.txt  run_tests.bat
include/algorithms/: BellmanFord.h  Dijkstra.h  Kruskal.h  Prim.h
include/graph/: AdjacencyList.h  Edge.h  IncidenceMatrix.h
include/io/: GraphLoader.h  ResultWriter.h
include/timer/: Timer.h
include/utils/: CParser.h  Generator.h
src/: main.cpp
src/algorithms/: BellmanFord.cpp  Dijkstra.cpp  Kruskal.cpp  Prim.cpp
src/graph/: AdjacencyList.cpp  Edge.cpp  IncidenceMatrix.cpp
src/io/: GraphLoader.cpp  ResultWriter.cpp
src/timer/: Timer.cpp
src/utils/: CParser.cpp  Generator.cpp
